pamc/src/tests/integration/should_succeed/mod.rs
use super::*;

mod multi_file;
mod single_file;

use warning_comparison::*;
mod warning_comparison;
