pamc/src/tests/integration/should_fail/mod.rs
use super::*;

mod single_file;
